--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -167,7 +167,7 @@
     <p>
       If you have any questions about this Privacy Policy, feel free to contact:
       <br><br>
-      📧 <strong>musfiqemam420@gmail.com</strong>
+      📧 <strong>musfiqemammaruf12@gmail.com</strong>
     </p>
 
     <footer>
